--- a/cap1.html
+++ b/cap1.html
@@ -16,7 +16,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a href="index.html" class="title">Ciências Humanas</a>
+		<a href="index.html" class="title">História</a>
 		<nav>
 			<ul>
 				<li><a href="index.html">Sumário</a></li>
