--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1 style="color: #fff;">Ciências Humanas</h1>
+				<h1 style="color: #fff;">História</h1>
 				<p>Capítulo 1: estudo da economia e do comércio mediterrânico, da antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</p>
 				<p>Capítulo 2: estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do estado em diferentes níveis.</p>
 				<p>Capítulo 3: estudo sobre o desenvolvimentopolítico-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.</p>
