subindo ajustes solicitados pelo professor

--- a/cap1.html
+++ b/cap1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Capítulo 1: estudo da economia e do comércio mediterrânico, da antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</title>
+	<title>Capítulo 1: Estudo da economia e do comércio mediterrânico, da Antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,10 +36,7 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h1>
-					CAPÍTULO 1: ESTUDO DA ECONOMIA E DO COMÉRCIO
-					MEDITERRÂNICO, DA ANTIGUIDADE AOS DIAS ATUAIS, A
-					FORMAÇÃO DE BLOCOS ECONÔMICOS E O PROCESSO DE
-					GLOBALIZAÇÃO
+					Capítulo 1: Estudo da economia e do comércio mediterrânico, da Antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização
 				</h1>
 				<p>
 					O comércio foi desde os tempos mais remotos uma das atividades de maior destaque entre os
@@ -101,17 +98,17 @@
 				<div class="img">
 					<img src="./images/image02.png" alt="">
 				</div>
-				<p class="legenda center">
-					http://www.efecade.com.br/fenicios/
-				</p>
+
 				<p>
 					Ao contrário da Fenícia, a Grécia desenvolveu uma agricultura consistente ainda que o seu
 					território fosse bastante montanhoso. Nos férteis vales gregos azeitonas e cereais eram os
 					principais produtos agrícolas cultivados. O comércio marítimo também se desenvolveu de
 					forma surpreendente nas cidades-Estado gregas e muitas delas se tornaram referência na
 					exportação de vinhos e azeite produzidos na região.
-				</p>	
+				</p>
 				<p>
+					Se tomarmos como exemplo a economia do império Romano, veremos que a cobrança de
+					baixas tarifas alfandegárias e uma rede de estradas e portos protegidos ajudou muito no
 					crescimento do comércio dos romanos com os demais povos. Naquela época, a agricultura era
 					a atividade econômica mais importante, além do comércio marítimo. A produção era feita por
 					artesãos em pequenas oficinas, e praticamente não existiam fabricas com grande produção.
@@ -131,7 +128,6 @@
 					dificuldades nas importações. 
 				</p>	
 				<h4>O COMÉRCIO MEDIEVAL EUROPEU	</h4>
-				<p>Acesse o vídeo clicando no link a seguir:</p>
 				<div class="video">
 					<iframe src="https://drive.google.com/file/d/1DOAHUclJH7NJij98iuSADzrrboWQT43q/preview" width="640" height="480"></iframe>
 				</div>
@@ -144,7 +140,7 @@
 				</p>
 				<p>
 					Ao longo da modernidade o comércio atlântico possibilitou o enriquecimento das monarquias
-					europeias que disputavam territórios a serem colonizados. A entrada de matérias primas para
+					europeias que disputavam territórios a serem colonizados. A entrada de matérias-primas para
 					serem manufaturadas em solo europeu movimentou a economia europeia e o estabelecimento
 					das bases de um comércio triangular girou riquezas, mas também muita desigualdade nas trocas
 					entre os continentes. A entrada de metais preciosos também foi fundamental para que possamos
@@ -217,7 +213,7 @@
 				</div>
 				<p>
 					Finalmente, podemos dizer que um dos maiores fenômenos que se intensificou a partir da
-					segunda metade do século XX e que atingiu enormes proporções no séculoXXI é o processo
+					segunda metade do século XX e que atingiu enormes proporções no século XXI é o processo
 					de globalização. Este processo envolve toda uma série de fenômenos econômicos e sociais entre
 					os diversos países do mundo, estendendo-se em todos os aspectos da vida das pessoas e dos
 					Estados.
