--- a/cap2.html
+++ b/cap2.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Capítulo 2: estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do estado em diferentes níveis.</title>
+	<title>Capítulo 2: Estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do Estado em diferentes níveis.</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,9 +36,7 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h4>
-					CAPÍTULO 2: ESTUDO DA RELAÇÃO ENTRE O EMPREGO DA
-					TECNOLOGIA, A CONSTRUÇÃO E A MANUTENÇÃO DO PODER
-					DO ESTADO EM DIFERENTES NÍVEIS.
+					Capítulo 2: Estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do Estado em diferentes níveis.
 				</h4>
 				<p>
 					A tecnologia empregada pelo Estado funcionou nos mais diversos sentidos a fim de conseguir
@@ -58,6 +56,7 @@
 					resolver ao longo deste capítulo.
 				</p>
 				<p>Contextualizando</p>
+				<p><b>A Transamazônica 1970</b></p>
 				<div class="img">
 					<img src="./images/image08.png" alt="">
 				</div>
@@ -102,6 +101,8 @@
 					praticamente impossível por ela transitar na época das chuvas. Este tipo de empreendimento
 					inacabado causa uma série de problemas na economia do país uma vez que a dificuldade no
 					escoamento da produção local acaba por dificultar o desenvolvimento da região como um todo.
+				</p>
+				<p>
 					Assim como a rodovia, uma série de obras de engenharia pelo mundo foram implementadas no
 					intuito de criar outra expectativa em relação ao desenvolvimento das regiões onde para onde
 					foram projetadas. Ainda falando do Brasil, temos o caso da ponte Rio-Niterói, que atravessa os
@@ -110,7 +111,7 @@
 					maior ponte do mundo. A tecnologia empregada na sua construção exigiu a perfuração do
 					subsolo oceânico a fim de encontrar um terreno rochoso capaz de aguentar a estrutura da ponte.
 					Para que isso ocorresse foram construídas ilhas flutuantes que carregavam os equipamentos de
-					perfuração que por sua vez trabalhavam dentro de tubos capazes de protegê-los da água do mar.	
+					perfuração que por sua vez trabalhavam dentro de tubos capazes de protegê-los da água do mar.
 				</p>	
 				<div class="img">
 					<img src="./images/image09.png" alt="">
@@ -196,7 +197,7 @@
 				<p>
 					A vacina contra a varíola, doença considerada erradicada desde o ano de 1980 pela Organização
 					Mundial de Saúde, foi criada pelo naturalista e médico britânico Edward Jenner no ano de 1796.
-					A palavra Vacina deriva do latimvaccinia, ou varíola das vacas. Jenner observou que as
+					A palavra Vacina deriva do latim <i>vaccinia</i>, ou varíola das vacas. Jenner observou que as
 					mulheres que lidavam com a ordenha das vacas tinham uma versão mais amena da doença. O
 					passo seguinte foi colocar em prática suas ideias e, através da infecção de um menino com o
 					pus do ubre ferido de uma vaca, pode comprovar a eficácia de sua tese.
