--- a/cap3.html
+++ b/cap3.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Capítulo 3: estudo sobre o desenvolvimentopolítico-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.</title>
+	<title>Capítulo 3: Estudo sobre o desenvolvimento político-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,12 +36,10 @@
 		<section id="main" class="wrapper">
 			<div class="inner">
 				<h1>
-					CAPÍTULO 3: ESTUDO SOBRE O DESENVOLVIMENTO
-					POLÍTICO-ECONÔMICO DAS SOCIEDADES, AS IDEIAS DE
-					GOVERNO E A FORMAÇÃO E CONSOLIDAÇÃO DOS ESTADOS.
+					Capítulo 3: Estudo sobre o desenvolvimento político-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.
 				</h1> 
 				<p>
-					Durante a Idade média a Igreja católica teve muito poder não apenas no âmbito religioso, mas
+					Durante a Idade Média a Igreja Católica teve muito poder não apenas no âmbito religioso, mas
 					também no campo da política. As estreitas relações entre o clero e a nobreza fizeram com que
 					fosse consolidado o poder de ambos os grupos na medida em que um necessitava do outro para
 					se legitimar. Porém, com o desenvolvimento das cidades e da burguesia urbana, associado ao
@@ -114,6 +112,7 @@
 					Dentre as principais características do absolutismo podemos destacar:
 				</p>
 				<ul>
+					<li>Concentração dos poderes nas mãos do rei;</li>
 					<li>Interferência nos assuntos religiosos</li>
 					<li>Coerção física dos dissidentes e opositores do regime;</li>
 					<li>Economia mercantilista;</li>
@@ -121,10 +120,9 @@
 					<li>Legitimação através do poder divino;</li>
 					<li>
 						Legitimação do poder através de teorias do Estado (entre os principais teóricos do
-						absolutismo estão Thomas Hobbes, Jacques Bossuet e Nicolau Maquiavel).
+				    absolutismo estão Thomas Hobbes, Jacques Bossuet e Nicolau Maquiavel).
 					</li>
 				</ul>
-				<p>Concentração dos poderes nas mãos do rei;</p>
 				<h4>CONSTRUINDO CONHECIMENTOS</h4>
 				<p>
 					Considera-se o Reino de Portugal como sendo o primeiro Estado moderno da Europa, tendo
@@ -174,8 +172,8 @@
 				</p>
 				<p>
 					Na Inglaterra, a consolidação do poder monárquico se deu ao término da Guerra das Duas Rosas
-					(1455 – 1485), momento em que duas famílias da nobreza britânica,os York (rosa branca) e os
-					Lencastre (rosa vermelha,) travaram uma série de lutas dinásticas pelo trono da Inglaterra. A
+					(1455 – 1485), momento em que duas famílias da nobreza britânica, os York (rosa branca) e os
+					Lencastre (rosa vermelha) travaram uma série de lutas dinásticas pelo trono da Inglaterra. A
 					dinastia Tudor toma o poder, dando os primeiros passos para a unificação do reino.
 				</p>
 				<div class="img">
@@ -259,22 +257,22 @@
 					franceses a liberdade de culto.
 				</p>
 				<p>
-					Posteriormente, um dos artífices do absolutismo na França, o Cardeal Richelieu, primeiroministro do rei Luís XIII, irá destacar-se como uma das figuras políticas mais proeminentes do
+					Posteriormente, um dos artífices do absolutismo na França, o Cardeal Richelieu, primeiro-ministro do rei Luís XIII, irá destacar-se como uma das figuras políticas mais proeminentes do
 					seu tempo. Internamente Richelieu implementou uma severa legislação tributária, enfrentou a
 					nobreza feudal que conspirava contra o rei e esvaziou de poder político os huguenotes,
 					protestantes calvinistas que se fortaleceram ao longo do tempo. Sua política externa visava
 					tornar a França mais poderosa que a rival Espanha e para isto não mediu esforços no campo
 					político e econômico. Consolidou o absolutismo monárquico e fez uso de práticas
 					mercantilistas para garantir a balança comercial favorável ao seu país. Este tipo de política
-					econômica teve continuidade através do “colbertismo” políticas implementadas por JeanBaptiste Colbert que foi o ministro de Estado e da economia durante o reinado de Luís XIV. A
+					econômica teve continuidade através do “colbertismo” políticas implementadas por Jean-Baptiste Colbert que foi o ministro de Estado e da economia durante o reinado de Luís XIV. A
 					este monarca é atribuída a célebre frase “O Estado sou eu”, demonstrando o quão forte era o
 					poder monárquico naquele período.
 				</p>	
-				<p>Acesse o vídeo clicando no link a seguir:</p>
 				<div class="video">
 					<iframe src="https://drive.google.com/file/d/1o-GY2l_v-xg4H7AOskhmkaDujoWL0E0g/preview" width="640" height="480"></iframe>
 				</div>	
-				<h4>O MERCANTILISMO </h4>				
+				<h4>Processos de unificação dos
+					Estados Nacionais</h4>				
 				<p>
 					Conforme vimos no início do capítulo, a formação dos Estados Nacionais se deu em épocas
 					diferentes uma vez que cada região da Europa possuía características diferentes em relação a
@@ -297,7 +295,7 @@
 					retorna a Itália e cria a Legião Italiana para lutar em favor da unificação do país.
 				</p>
 				<p>
-					O outro é o monarca Vítor Emanuel II, Rei da Sardenha e unificador daPenínsula Itálica em um
+					O outro é o monarca Vítor Emanuel II, Rei da Sardenha e unificador da Península Itálica em um
 					único Estado, tornando-se Rei da Itália no ano de 1861. O período do “Risorgimento”
 					(ressurgimento), como ficou conhecido o processo de unificação do país em torno de uma
 					monarquia constitucional, foi bastante conturbado, e Vitor Emanuel II teve a árdua tarefa de
@@ -310,7 +308,7 @@
 					Guilherme I, Rei da Prússia, sagrado o primeiro imperador da Alemanha unificada. Antes disso
 					já existiam alianças entre os líderes dos Estados alemães que desde a criação do Sacro-Império
 					Romano Germânico (962-1806) reconheciam uma série de disposições culturais e interesses
-					políticos e econômicos comuns entre os Estados membros. Contudo, foi após a Guerra FrancoPrussiana que a Alemanha tomou os contornos aproximados do Estado que conhecemos hoje.
+					políticos e econômicos comuns entre os Estados membros. Contudo, foi após a Guerra Franco-Prussiana que a Alemanha tomou os contornos aproximados do Estado que conhecemos hoje.
 					O Kaiser (Imperador) Guilherme I foi o responsável por tornar o país uma potência no cenário
 					europeu do período.
 				</p>
@@ -367,12 +365,14 @@
 					com a Igreja Católica por motivos e em épocas distintas. Não raras vezes processaram-se dentro
 					destes reinos guerras de religião que buscavam estabelecer a supremacia político-religiosa de
 					uma parcela da sociedade sobre a outra, legitimando o poder da monarquia local.
+				</p>	
+				<p>
 					Itália e Alemanha constituíram enquanto nações unificadas em um período posterior a outros
 					Estados europeus. Isto se deve em muito ao poder exercido pelas monarquias locais que
 					hesitavam em abrir mão dos seus privilégios em troca de uma nação unificada. Porém a
 					necessidade de modernização da administração política e econômica suplantou os poderes
 					localizados acabando por instaurar a unidade nacional nestes dois países.
-				</p>																														
+				</p>																													
 			</div> <!--/inner-->
 		</section><!-- /Main -->
 	</div>
