--- a/cap4.html
+++ b/cap4.html
@@ -72,13 +72,16 @@
 					atividade de produzir um alfinete é, deste modo, dividida em cerca de dezoito operações
 					distintas, as quais, nalgumas fábricas, são todas executadas por operários diferentes, embora
 					noutras um mesmo homem realize, por vezes duas ou três dentre elas
+
+				</p>	
+				<p>
 					Eu próprio vi uma pequena fábrica deste tipo, que empregava dez homens e onde, por
 					consequência, vários deles executavam duas ou três operações distintas. Mas embora fossem
 					muito pobres e não se encontrassem, por isso, muito bem apetrechados com a maquinaria
 					necessária, eram capazes de produzir entre eles, quando nisso se empenhavam, cerca de doze
 					libras de alfinetes por dia. Assim, aqueles dez homens produziam em conjunto mais de quarenta
-					e oito mil alfinetes num dia
-				</p>	
+					e oito mil alfinetes num dia.
+				</p>
 				<blockquote>
 					<p>
 						(…) O grande aumento da quantidade de trabalho que, em consequência da divisão do trabalho,
@@ -89,11 +92,12 @@
 						de realizar o trabalho de muitos.”
 					</p>
 				</blockquote>
-				<p>
+				<p class="legenda">
 					Smith, Adam (1776), A Riqueza das Nações, Lisboa: Fundação Calouste Gulbenkian, pp. 79-
 					83
+					<br>
+					https://economianostra.wordpress.com/2013/05/28/a-fabrica-de-alfinetes-de-adam-smith/
 				</p>
-				<p class="legenda">https://economianostra.wordpress.com/2013/05/28/a-fabrica-de-alfinetes-de-adam-smith/</p>
 				<p>
 					No trecho acima vemos uma passagem muito conhecida do livro “A riqueza das nações” do
 					filósofo e economista britânico Adam Smith que viveu no século XIX, tendo sido ele
@@ -175,16 +179,18 @@
 				</p>
 				<p>
 					Em um momento seguinte teve início um processo de concentração destes trabalhadores em
-					oficinas que produziam a serviço do capitalista que lhes pagava-lhes pelo montante do trabalho
+					oficinas que produziam a serviço do capitalista que pagava-lhes pelo montante do trabalho
 					realizado. A vantagem era justamente o controle que passou a ser exercido sobre o tempo
 					empregado no trabalho, o uso dos materiais e a padronização do produto final.
+				</p>	
+				<p>
 					Em uma etapa posterior os trabalhadores passaram a ser divididos por tarefas e a mão de obra
 					paga a preço fixo, ou seja a jornada de trabalho e não a produção é que passou a ser remunerada.
 					A introdução do maquinário passou a ser outro elemento de importância significativa na
 					produção daquela época, sendo feitos grandes investimentos na construção de espaços capazes
 					de suportar o maquinário e o número cada vez maior de trabalhadores que se concentravam nas
 					fábricas do período.
-				</p>	
+				</p>
 				<div class="img">
 					<img src="./images/image22.png" alt="">
 				</div>
@@ -292,7 +298,7 @@
 					vez o Paraguai, ainda na primeira metade do século XIX já apresentava um índice de
 					desenvolvimento industrial considerável, demonstrando-se superior aos países vizinhos, livre
 					e autônomo em relação as potências europeias. Este processo foi eclipsado pela Guerra do
-					Paraguai que se estendeu de 1865 a 1870 e custou ao país o extermínio de grande parta da sua
+					Paraguai que se estendeu de 1865 a 1870 e custou ao país o extermínio de grande parte da sua
 					população e o fim da sua indústria.	
 				</p>											
 			</div> <!--/inner-->
