--- a/cap5.html
+++ b/cap5.html
@@ -95,7 +95,7 @@ http://www.multirio.rj.gov.br/index.php/estude/historia-do-brasil/rio-de-janeiro
 					se vestiam e portavam-se em público. Naquela época a Europa passava por uma guerra
 					conduzida pelo líder francês Napoleão Bonaparte que expandia os seus domínios por todas as
 					regiões, inclusive sobre as colônias dos países europeus noutros continentes. Diante do avanço
-					das tropas francesas sobre Portugal, o Príncipe Regente Don João decidiu pela retirada da corte
+					das tropas francesas sobre Portugal, o Príncipe Regente Dom João decidiu pela retirada da corte
 					em direção ao Brasil.
 				</p>
 				<p>
@@ -162,6 +162,8 @@ http://www.multirio.rj.gov.br/index.php/estude/historia-do-brasil/rio-de-janeiro
 					ano de 1891. Vários foram os suspeitos, mas nunca foi descoberta a identidade do autor dos
 					crimes. Exames feitos no xale de uma das vítimas no ano de 2014 indicaram que o DNA do
 					assassino havia sido descoberto, mas ainda pairam muitas dúvidas a este respeito.
+				</p>
+				<p>
 					Para entendermos mais a respeito das diferenças entre sociedades, e entre grupos distintos
 					dentro de uma mesma sociedade, podemos utilizar exemplos do período de que estamos
 					tratando. Na sociedade ocidental um determinado padrão estético foi adotado e de certa forma
@@ -175,7 +177,7 @@ http://www.multirio.rj.gov.br/index.php/estude/historia-do-brasil/rio-de-janeiro
 					seja, uma prática que nos leva a pensar que o que vem da Europa é essencialmente melhor,
 					superior ou mais desenvolvido que existe ou é praticado noutros lugares. Isto é uma falácia pois
 					sabemos que cada local tem a sua cultura não podendo ser mensurada ou classificada a partir
-					de padrões que lhe são estranhos. Poemas como o do indo-britânico RudyardKipling dão-nos a
+					de padrões que lhe são estranhos. Poemas como o do indo-britânico Rudyard Kipling dão-nos a
 					medida deste tipo de preconceito.	
 				</p>	
 				<div class="img">
@@ -223,7 +225,7 @@ http://www.multirio.rj.gov.br/index.php/estude/historia-do-brasil/rio-de-janeiro
 				<p>
 					Desde a chegada da corte portuguesa em terras brasileiras uma série de modificações foram
 					ocorrendo em nossa sociedade ao ponto de serem incorporados aos hábitos locais as práticas
-					típicas dos Europeus que aqui aportaram no ano de 1808. A bem da verdade a nossa sociedade
+					típicas dos europeus que aqui aportaram no ano de 1808. A bem da verdade a nossa sociedade
 					já era altamente influenciada pela sociedade europeia, não só a portuguesa, mas também pelos
 					ingleses e franceses que ditavam maneiras de ser e comportar-se nos ambientes públicos e
 					privados.
