--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1 style="color: #fff;">História</h1>
-				<p>Capítulo 1: estudo da economia e do comércio mediterrânico, da antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</p>
-				<p>Capítulo 2: estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do estado em diferentes níveis.</p>
-				<p>Capítulo 3: estudo sobre o desenvolvimentopolítico-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.</p>
-				<p>Capítulo 4: estudo sobre a produção industrial, seu crescimento e suas bases tecnológicas.</p>
-				<p>Capítulo 5: estudo a respeito da cultura material e sua relação com os elementos de distinção social e cultural</p>
+				<p>Capítulo 1: Estudo da economia e do comércio mediterrânico, da Antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</p>
+				<p>Capítulo 2: Estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do Estado em diferentes níveis.</p>
+				<p>Capítulo 3: Estudo sobre o desenvolvimento político-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.</p>
+				<p>Capítulo 4: Estudo sobre a produção industrial, seu crescimento e suas bases tecnológicas.</p>
+				<p>Capítulo 5: Estudo a respeito da cultura material e sua relação com os elementos de distinção social e cultural</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Iniciar</a></li>
 				</ul>
@@ -53,7 +53,7 @@
 			<section>
 				<div class="content">
 					<div class="inner">
-						<h2 id="one">Capítulo 1: estudo da economia e do comércio mediterrânico, da antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</h2>
+						<h2 id="one">Capítulo 1: Estudo da economia e do comércio mediterrânico, da Antiguidade aos dias atuais, a formação de blocos econômicos e o processo de globalização</h2>
 						<p>
 							O comércio foi desde os tempos mais remotos uma das atividades de maior destaque entre os
 							povos. Ele foi desenvolvido internamente, cabendo a alguns grupos o trabalho de movimentar
@@ -78,7 +78,7 @@
 			<section>
 				<div class="content">
 					<div class="inner">
-						<h2 id="two">Capítulo 2: estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do estado em diferentes níveis.</h2>
+						<h2 id="two">Capítulo 2: Estudo da relação entre o emprego da tecnologia, a construção e a manutenção do poder do Estado em diferentes níveis.</h2>
 						<p>
 							A tecnologia empregada pelo Estado funcionou nos mais diversos sentidos a fim de conseguir
 							manter as bases da unidade nacional. Durante os períodos de guerra grande parte do esforço
@@ -105,7 +105,7 @@
 			<section>
 				<div class="content">
 					<div class="inner">
-						<h2 id="three">Capítulo 3: estudo sobre o desenvolvimentopolítico-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados. </h2>
+						<h2 id="three">Capítulo 3: Estudo sobre o desenvolvimento político-econômico das sociedades, as ideias de governo e a formação e consolidação dos estados.</h2>
 						<p>
 							Durante a Idade média a Igreja católica teve muito poder não apenas no âmbito religioso, mas
 							também no campo da política. As estreitas relações entre o clero e a nobreza fizeram com que
@@ -136,7 +136,7 @@
 			<section>
 				<div class="content">
 					<div class="inner">
-						<h2 id="four">Capítulo 4: estudo sobre a produção industrial, seu crescimento e suas bases tecnológicas.</h2>
+						<h2 id="four">Capítulo 4: Estudo sobre a produção industrial, seu crescimento e suas bases tecnológicas.</h2>
 						<p>
 							Durante a transição da Idade Média para o mundo moderno, processaram-se uma série de
 							transformações no meio político e econômico. Estas transformações modificaram também as
@@ -156,7 +156,7 @@
 			<section>
 				<div class="content">
 					<div class="inner">
-						<h2 id="five">Capítulo 5: estudo a respeito da cultura material e sua relação com os elementos de distinção social e cultural</h2>
+						<h2 id="five">Capítulo 5: Estudo a respeito da cultura material e sua relação com os elementos de distinção social e cultural</h2>
 						<p>
 							Tudo que diz respeito à vida material das pessoas e dos grupos humanos deve ser entendido
 							como sendo muito mais do que meros acessórios que servem ao dia a dia. Para além disto, eles
